Updates gitlab ci config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 image: "bougyman/voidlinux:x86_64-glibc-locales_latest"
 
 build_x86_64:
-   - ./gitlab-build.sh
+  script:
+    - ./gitlab-build.sh
