--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,5 +2,4 @@ image: "bougyman/voidlinux:x86_64-glibc-locales_latest"
 
 build_x86_64:
   script:
-    - xbps-install -Sy buildah bash
-    - ./gitlab-build.sh
+    - echo "Hello!"
