--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: "fedora:latest"
 
 build_x86_64:
   script:
-    - dnf install -y buildah git podman
+    - dnf install -y buildah git podman wget
     - git submodule init
     - git submodule update
     - ./gitlab-build.sh
