[main-] Adds CMD to Dockerfile

--- a/Dockerfile.glibc_locales
+++ b/Dockerfile.glibc_locales
@@ -1,3 +1,4 @@
 FROM registry.gitlab.com/bougyman/voidlinux-containers/voidlinux:x86_64-glibc-locales_latest
 MAINTAINER bougyman <bougyman@hey.com>
+CMD /bin/sh
 
