--- a/Dockerfile.musl
+++ b/Dockerfile.musl
@@ -1,3 +1,4 @@
 FROM registry.gitlab.com/bougyman/voidlinux-containers/voidlinux:x86_64-musl_latest
 MAINTAINER bougyman <bougyman@hey.com>
+CMD /bin/sh
 
