--- a/Dockerfile.musl
+++ b/Dockerfile.musl
@@ -1,4 +1,4 @@
 FROM registry.gitlab.com/bougyman/voidlinux-containers/voidlinux:x86_64-musl_latest
 LABEL maintainer="bougyman <bougyman@hey.com>" description="Void Linux image with musl libc (no glibc)" \
-      origin="registry.gitlab.com/bougyman/voidlinux-containers/voidlinux:x86_64-glibc-locales_latest"
+      origin="registry.gitlab.com/bougyman/voidlinux-containers/voidlinux:x86_64-musl_latest"
 CMD /bin/sh
