Cleans up ruby noextract declarations

--- a/confs/noextract.conf
+++ b/confs/noextract.conf
@@ -5,4 +5,5 @@ noextract=/usr/share/man*
 noextract=/usr/share/bash-completion*
 noextract=/usr/share/zsh*
 noextract=/usr/share/info*
-noextract=/lib/ruby/gems/*/doc**
+noextract=/lib/ruby/gems/*/doc*
+noextract=/lib/ruby/gems/*/cache*
